Inicia refactor seguro del flujo de pagos